--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,8 @@
 CC=gcc
-CFLAGS=-g -W -Wall -std=c99
+CFLAGS += -g -W -Wall -std=c99 -Wall -Wextra -Wpedantic \
+          -Wformat=2 -Wno-unused-parameter -Wshadow \
+          -Wwrite-strings -Wstrict-prototypes -Wold-style-definition \
+          -Wredundant-decls -Wnested-externs -Wmissing-include-dirs
 
 main: mmap.o spi.o
 
